fix christmas theme displaying on mobile

--- a/src/assets/scss/_christmas-theme.scss
+++ b/src/assets/scss/_christmas-theme.scss
@@ -103,4 +103,21 @@ body.christmas-theme {
       }
     }
   }
+
+  .home--mobile {
+    .home__mobile-button {
+      &__text {
+        display: none;
+      }
+
+      background-image: url('/assets/images/christmas-card.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .home__google-img {
+      opacity: 0.5;
+    }
+  }
 }
